@@ -8,6 +8,12 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Fixed Xinha link-munging so that you can now use the WYSIWYG editor
+to create links and images.  Full-screen mode now works properly.
+[Jesse Erlbaum]
+
+=item *
+
 In Krang::Publish I decoupled processing of assets from publish_story()
 and preview_story() allowing for future subclassing into Krang::Publisher::Parallel
 simply redefine _process_assets() and _process_preview_assets().
